# code-challenges

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
challenges/: CMakeLists.txt
challenges/BestProtection/: README.md
challenges/BestProtection/src/: BestProtection.cpp
challenges/ChallengeTemplate/: Readme.md
challenges/ChallengeTemplate/input/: output1.txt
challenges/ChallengeTemplate/src/: ChallengeTemplate.cpp
challenges/ClimateChange/: README.md
challenges/ClimateChange/input/: input1.txt  input2.txt  input3.txt  input4.txt  output1.txt  output2.txt  output3.txt  output4.txt
challenges/ClimateChange/src/: ClimateChange.cpp
challenges/FutureBalance/: README.md
challenges/FutureBalance/input/: input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
challenges/FutureBalance/src/: FutureBalance.cpp
challenges/FutureEnergy/: Readme.md
challenges/FutureEnergy/src/: FutureEnergy.cpp
challenges/FutureVision/: README.md
challenges/FutureVision/input/: input1.txt  input2.txt  input4.txt  input5.txt  output2.txt  output4.txt  output5.txt
challenges/FutureVision/src/: FutureVision.cpp
challenges/RebuildInfrastructure/: README.md
challenges/RebuildInfrastructure/input/: input3.txt  input4.txt
challenges/RebuildInfrastructure/src/: RebuildInfrastructure.cpp
challenges/ReverseAlienNotation/: README.md
challenges/ReverseAlienNotation/input/: input2.txt  input3.txt  input4.txt  output3.txt  output4.txt
challenges/SolarStormPrediction/: README.md
challenges/SoundToWords/: Readme.md
include.in/: header.hpp.in
(+9 files in other folders)
